--- a/store/blocks/desktop/components/header/header-section-bottom.jsonc
+++ b/store/blocks/desktop/components/header/header-section-bottom.jsonc
@@ -28,32 +28,52 @@
     "flex-layout.row#desktop__header--menu": {
       "title": "menu para escritorio", 
       "children": [
-        "flex-layout.col#header__menu--animals"
+        // "flex-layout.col#header__menu--animals"
+        "link#header__menu--dog",
+        "link#header__menu--cat"
       ], 
       "props": {
         "blockClass": "desktop__header--menu",
-        "colsizing": "auto",
+        // "colsizing": "equal",
         "horizontalAlign": "around"
       }
     },
-    "flex-layout.col#header__menu--animals": {
-      "title": "Menu de animales",
-      "children": [
-        "flex-layout.col#header__menu--animals1", 
-        "flex-layout.col#header__menu--animals2"
-      ], 
-      "props": {"blockClass": "header__menu--animals"}
-    },
-    "flex-layout.col#header__menu--animals1": {
-      "title": "Menu perro",
-      "children": [
-        "image#header__menu--dog", 
-        "rich-text#header__menu--text-dog"
-      ], 
+    "link#header__menu--dog": {
+      "title": "", 
+      "children": ["image#header__menu--dog"],
       "props": {
-        "blockClass": "header__menu--animals1"
+        "blockClass": "header__menu--kind-pet", 
+        "href": "/",
+        "label": "PERROS"
       }
-    }, 
+    },
+    "link#header__menu--cat": {
+      "title": "", 
+      "children": ["image#header__menu--cat"],
+      "props": {
+        "blockClass":"header__menu--kind-pet", 
+        "href": "/",
+        "label": "GATOS"
+      }
+    },
+    // "flex-layout.col#header__menu--animals": {
+    //   "title": "Menu de animales",
+    //   "children": [
+    //     "flex-layout.col#header__menu--animals1", 
+    //     "flex-layout.col#header__menu--animals2"
+    //   ], 
+    //   "props": {"blockClass": "header__menu--animals"}
+    // },
+    // "flex-layout.col#header__menu--animals1": {
+    //   "title": "Menu perro",
+    //   "children": [
+    //     "image#header__menu--dog", 
+    //     "rich-text#header__menu--text-dog"
+    //   ], 
+    //   "props": {
+    //     "blockClass": "header__menu--animals1"
+    //   }
+    // }, 
       "image#header__menu--dog": {
         "title": "Menu perro img",
         "props": {
@@ -61,23 +81,23 @@
           "src": "assets/img/header__menu-dog.png"
         }
       }, 
-      "rich-text#header__menu--text-dog": {
-        "title": "Menu perro texto",
-        "props": {
-          "blockClass": "header__menu--text",
-          "text": "PERROS",
-          "textPosition": "CENTER"
-        }
-      },
-    "flex-layout.col#header__menu--animals2": {
-      "children": [
-        "image#header__menu--cat", 
-        "rich-text#header__menu--text-cat"
-      ],
-      "props": {
-        "blockClass": "header__menu--animals1"
-      }
-    },
+    //   "rich-text#header__menu--text-dog": {
+    //     "title": "Menu perro texto",
+    //     "props": {
+    //       "blockClass": "header__menu--text",
+    //       "text": "PERROS",
+    //       "textPosition": "CENTER"
+    //     }
+    //   },
+    // "flex-layout.col#header__menu--animals2": {
+    //   "children": [
+    //     "image#header__menu--cat", 
+    //     "rich-text#header__menu--text-cat"
+    //   ],
+    //   "props": {
+    //     "blockClass": "header__menu--animals1"
+    //   }
+    // },
       "image#header__menu--cat": {
         "title": "Menu gato img",
         "props": {
@@ -85,14 +105,14 @@
           "src": "assets/img/header__menu-cat.png"
         }
       }, 
-      "rich-text#header__menu--text-cat": {
-        "title": "Menu gato texto",
-        "props": {
-          "blockClass": "header__menu--text",
-          "text": "GATOS", 
-          "textPosition": "CENTER"
-        }
-      },
+    //   "rich-text#header__menu--text-cat": {
+    //     "title": "Menu gato texto",
+    //     "props": {
+    //       "blockClass": "header__menu--text",
+    //       "text": "GATOS", 
+    //       "textPosition": "CENTER"
+    //     }
+    //   },
     "link#desktop__header--menu-offers": {
       "children": ["icon#desktop__header--footprint"],
       "props": {
