feat: structure and responsive design of search results

--- a/store/blocks/global/components/home/home-recommended-products.jsonc
+++ b/store/blocks/global/components/home/home-recommended-products.jsonc
@@ -39,7 +39,7 @@
     ]
   }, 
   "gallery": {
-    "blocks": ["product-summary.shelf"]
+    "blocks": ["product-summary.shelf#home__products--recommended"]
   },
   "list-context.product-list#global__home--products-recommended": {
     "title": "Section-products-recommended",
