--- a/store/blocks/global/screen/search.jsonc
+++ b/store/blocks/global/screen/search.jsonc
@@ -1,7 +1,60 @@
 {
   "store.search": {
+    "title": "store-search", 
+    "blocks": ["search-result-layout"], 
+    "props": {
+      "context": {
+        "skusFilter": "ALL_AVAILABLE",
+        "simulationBehavior": "default"
+      }
+    }
+  }, 
+  "store.search#department": {
+    "title": "search-department", 
+    "blocks": ["search-result-layout#department"], 
+    "props": {
+      "context": {
+        "skusFilter": "ALL_AVAILABLE",
+        "simulationBehavior": "default"
+      }
+    }
+  },
+  "store.search#category": {
+    "title": "search-category", 
+    "blocks": ["search-result-layout"], 
+    "props": {
+      "context": {
+        "skusFilter": "FIRST_AVAILABLE",
+        "simulationBehavior": "default"
+      }
+    }
+  },
+  "store.search#subcategory": {
+    "title": "search-subcategory", 
+    "blocks": ["search-result-layout"], 
+    "props": {
+      "context": {
+        "skusFilter": "FIRST_AVAILABLE",
+        "simulationBehavior": "default"
+      }
+    }
+  },
+  "store.search#brand": {
+    "title": "search-brand", 
+    "blocks": ["search-result-layout"], 
+    "props": {
+      "context": {
+        "skusFilter": "FIRST_AVAILABLE",
+        "simulationBehavior": "default"
+      }
+    }
+  },
+  "search-result-layout#department": {
+    "title": "search-resuls-layout-department", 
     "blocks": [
-      
-    ]
+      "search-result-layout.desktop#desktop__search--results-department",
+      "search-result-layout.mobile#mobile__search--results-department", 
+      "search-not-found-layout"
+    ] 
   }
 }
