--- a/store/blocks/global/components/search/search-content.jsonc
+++ b/store/blocks/global/components/search/search-content.jsonc
@@ -2,28 +2,10 @@
   "search-content#global__search--content-products": {
     "title": "search-content-products", 
     "blocks": [
-      "gallery#global__search--content-slider",
-      "gallery#global__search--content-department", 
+      "gallery#global__search--content-department",
       "not-found"
     ]
   },
-    "gallery#global__search--content-slider": {
-      "title": "gallery-search-results-slider", 
-      "props": {
-        "layouts": [
-          {
-            "name": "slider-grid", 
-            "component": "SliderGrid", 
-            "itemsPerRow": {
-              "desktop": 5,
-              "tablet": 3, 
-              "phone": 1
-            }
-          }
-        ],
-        "SliderGrid": "product-summary.shelf#global__search--content-slider"
-      }
-    },
     "gallery#global__search--content-department": {
       "title": "gallery-search-results", 
       "props": {
@@ -36,9 +18,19 @@
               "tablet": 3, 
               "phone": 1
             }
+          }, 
+          {
+            "name": "slider-grid", 
+            "component": "SliderGrid", 
+            "itemsPerRow": {
+              "desktop": 5,
+              "tablet": 3, 
+              "phone": 1
+            }
           }
         ],
-        "GeneralGrid": "product-summary.shelf#global__search--content-department"
+        "GeneralGrid": "product-summary.shelf#global__search--content-department", 
+        "SliderGrid": "product-summary.shelf#global__search--content-slider"
       }
     },  
       "product-summary.shelf#global__search--content-department": {
