--- a/store/blocks/global/components/search/search-shelf.jsonc
+++ b/store/blocks/global/components/search/search-shelf.jsonc
@@ -1,31 +1,56 @@
-{
-  "list-context.product-list#global__search--content-department": {
-    "title": "section-product-shelf-search-content",
-    "blocks": ["product-summary.shelf#global__search--content-slider"],
-    "children": ["slider-layout#global__search--content-department"], 
-    "props": {/*"blockClass": "global__home--products-recommended"*/}
-  },
-  "product-summary.shelf#global__search--content-slider": {
-    "title": "product-summary-container",
-    "children": [
-      "product-summary-image",
-      "product-summary-name",
-      "product-summary-sku-selector",
-      "product-selling-price",
-      "add-to-cart-button"
+{ 
+  "search-content#global__search--content-products-slider": {
+    "title": "search-content-products-slider", 
+    "blocks": [
+      "gallery#global__search--content-slider", 
+      "not-found"
     ]
   },
-  "slider-layout#global__search--content-department": {
-    "title": "slider-search-content-deparment", 
-    "props": {
-      // "itemsPerPage":{
-      //   "desktop": 5, 
-      //   "tablet": 3,
-      //   "phone": 1
-      // }, 
-      "infinite": true,
-      "showPaginationDots": "never",
-      "blockClass": "home__products--recommended"
+    "gallery#global__search--content-slider": {
+      "title": "gallery-search-results", 
+      "props": {
+        "layouts": [
+          {
+            "name": "slider-grid", 
+            "component": "SliderGrid", 
+            "itemsPerRow": {
+              "desktop": 5,
+              "tablet": 3, 
+              "phone": 1
+            }
+          }
+        ],
+        "SliderGrid": "product-summary.shelf#global__search--content-slider"
+      }
+    },  
+    
+    "list-context.product-list#global__search--content-slider": {
+      "title": "section-product-shelf-search-content",
+      "blocks": ["product-summary.shelf#global__search--content-slider"],
+      "children": ["slider-layout#global__search--content-slider"], 
+      "props": {/*"blockClass": "global__home--products-recommended"*/}
+    },
+    "product-summary.shelf#global__search--content-slider": {
+      "title": "product-summary-container",
+      "children": [
+        "product-summary-image",
+        "product-summary-name",
+        "product-summary-sku-selector",
+        "product-selling-price",
+        "add-to-cart-button"
+      ]
+    },
+    "slider-layout#global__search--content-slider": {
+      "title": "slider-search-content-slider", 
+      "props": {
+      //   "itemsPerPage":{
+      //     "desktop": 5, 
+      //     "tablet": 3,
+      //     "phone": 1
+      //   }, 
+      //   "infinite": true,
+      //   "showPaginationDots": "never",
+        "blockClass": "home__products--recommended"
+      }
     }
-  }
 }
